<resources>
    <string name="app_name">FirstApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_your_adventure">Start\nyour\nadventure</string>
    <string name="log_in">Log in</string>
    <string name="first_time">First time here? Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_account">New\nAccount</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="not_the_first_time_here">Not the first time here? Log In</string>
    <string name="step_1">1/2\nsteps</string>
    <string name="step_2">2/2\nsteps</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="time">5 m</string>
    <string name="description">Description</string>
    <string name="allow_comments">Allow comments</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="yagubbb">Yagubbb</string>
    <string name="yaqub_quluzade">Yaqub Quluzade</string>
    <string name="bio">Bio:</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
</resources>