<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <ImageView
        android:id="@+id/image_view_register_page_1_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"

        app:layout_constraintBottom_toTopOf="@id/button_register_page_2_sign_up"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/text_view_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/edit_text_new_password"
        app:layout_constraintEnd_toEndOf="@id/edit_text_new_password"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/edit_text_new_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_view_steps_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/step_1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/text_view_new_account"
        app:layout_constraintEnd_toEndOf="@id/edit_text_new_password"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/text_view_new_account"
        app:layout_constraintTop_toTopOf="@id/text_view_new_account"
        app:layout_constraintVertical_bias="1"

        >

    </TextView>


    <EditText
        android:id="@id/edit_text_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:theme="@style/defaultEdit"
        android:textColor="@color/default_orange"
        android:inputType="textPersonName"

        android:textColorHint="@color/edit_text"
        app:layout_constraintBottom_toTopOf="@+id/button_register_page_2_sign_up"
        app:layout_constraintEnd_toEndOf="@id/button_register_page_2_sign_up"
        app:layout_constraintStart_toStartOf="@id/button_register_page_2_sign_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintVertical_chainStyle="spread">


    </EditText>


    <EditText
        android:id="@+id/edit_text_new_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/default_orange"
        android:textColorHint="@color/edit_text"
        android:imeOptions="actionDone"
        android:theme="@style/defaultEdit"
        app:layout_constraintBottom_toTopOf="@+id/button_register_page_2_sign_up"
        app:layout_constraintEnd_toEndOf="@id/button_register_page_2_sign_up"
        app:layout_constraintStart_toStartOf="@id/button_register_page_2_sign_up"
        app:layout_constraintTop_toBottomOf="@id/edit_text_new_password"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="spread">


    </EditText>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register_page_2_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_button"
        android:elevation="100dp"
        android:padding="15dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        app:layout_constraintWidth_percent="0.67">


    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/text_view_back_to_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_the_first_time_here"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_register_page_2_sign_up"
        app:layout_constraintStart_toStartOf="@id/button_register_page_2_sign_up"
        app:layout_constraintTop_toBottomOf="@id/button_register_page_2_sign_up"
        app:layout_constraintVertical_bias="0.15">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>