<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">


    <ImageView
        android:id="@+id/image_view_login_page_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"

        app:layout_constraintBottom_toTopOf="@id/button_log_in"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
         />

    <TextView
        android:id="@+id/text_view_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/edit_text_email"
        app:layout_constraintEnd_toEndOf="@id/edit_text_email"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/edit_text_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />


    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:textColorHint="@color/edit_text"
        android:backgroundTint="@color/edit_text"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@color/default_orange"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_password"
        app:layout_constraintEnd_toEndOf="@id/edit_text_password"
        app:layout_constraintStart_toStartOf="@id/edit_text_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

    </EditText>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/edit_text"
        android:backgroundTint="@color/edit_text"
        android:paddingBottom="20dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/button_log_in"
        app:layout_constraintEnd_toEndOf="@id/button_log_in"
        app:layout_constraintStart_toStartOf="@id/button_log_in"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

    </EditText>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_log_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_button"
        android:elevation="100dp"
        android:padding="15dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        app:layout_constraintWidth_percent="0.67">


    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/text_view_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_time"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintTop_toBottomOf="@id/button_log_in"
        app:layout_constraintStart_toStartOf="@id/button_log_in"
        app:layout_constraintEnd_toEndOf="@id/button_log_in"
        app:layout_constraintBottom_toBottomOf="parent">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>