<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/account_white"
    android:paddingHorizontal="@dimen/default_margin">

    <TextView
        android:id="@+id/text_view_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <TextView
            android:id="@+id/text_view_account_name_share_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:text="Yagubbb"
            android:textColor="@color/default_orange"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintEnd_toStartOf="@id/card_view_profile_photo_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_view_profile_photo_container"
            app:layout_constraintBottom_toBottomOf="@id/card_view_profile_photo_container">

        </TextView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_profile_photo_container"
            android:layout_marginVertical="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/image_view_shared_photo"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <ImageView
                android:id="@+id/image_view_profile_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/profile"
                android:scaleType="centerCrop">

            </ImageView>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/card_view_profile_photo_container"
            app:layout_constraintTop_toTopOf="@id/card_view_profile_photo_container"
            app:layout_constraintBottom_toBottomOf="@id/card_view_profile_photo_container"
            android:text="@string/time"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:textColor="@color/time"
            >

        </TextView>


        <ImageView
            android:id="@+id/image_view_shared_photo"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1.9:1"
            app:layout_constraintTop_toBottomOf="@id/card_view_profile_photo_container">

        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/edit_text_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/image_view_shared_photo">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/text_view_allow_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_comments"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/edit_text_new_password"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintTop_toBottomOf="@id/edit_text_new_password">

        </TextView>

        <Switch
            android:id="@+id/switch_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_view_allow_comment"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintTop_toTopOf="@id/text_view_allow_comment">

        </Switch>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Share"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@id/text_view_allow_comment"
            app:layout_constraintTop_toBottomOf="@id/switch_comments"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.3" />






    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>